--- a/Website/Pages/portfoli.html
+++ b/Website/Pages/portfoli.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!DOCTYPE html>
-<html lang="en">
-
 <head>
     <title>Bootstrap Example</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="..\CSS\portfolio.css">
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
-    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
 
 </head>
 
@@ -41,58 +35,7 @@
         </nav>
     </header>
     <h1 class="phead"><u>Portfolio</u></h1>
-
     <!--Carousel Start-->
-    <!-- <div class="container">
-        <h2>Past projects</h2>
-        <p>We once worked in a bootcamp and made some cool stuffs such as... <br />
-        <div id="myCarousel" class="carousel slide" data-ride="carousel"> -->
-    <!-- indicators -->
-    <!-- <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-            </ol> -->
-
-    <!-- wrapper for slides -->
-    <!-- <div class="carousel-inner">
-                <div class="item active">
-                    <img src="https://c4.wallpaperflare.com/wallpaper/39/346/426/digital-art-men-city-futuristic-night-hd-wallpaper-preview.jpg"
-                        alt="cool photo" style="height:400px;width:100%">
-                    <div class="carousel-caption">
-                        <h3><u>Cool</u></h3>
-                        <p class="pport">atttempt at bootstrap</p>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="https://wallpapercave.com/wp/lfxxrxt.jpg" style="height:400px;width:100%;">
-                    <div class="carousel-caption">
-                        <h3><u>Dope</u></h3>
-                        <p class="pport"> Dope af but of course stay proffessional</p>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="https://www.itl.cat/pngfile/big/236-2366806_minimalistic-landscape-wallpaper-1080p.jpg"
-                        alt="an ok photo" style="height:400px;width:100%">
-                    <div class="carousel-caption">
-                        <h3><u>Not totally cool but cool enough</u></h3>
-                        <p class="pport">not bad for a first project id hope</p>
-                    </div>
-                </div> -->
-
-    <!-- Left and right controls -->
-    <!-- <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="right carousel-control" href="#myCarousel" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-        </div> -->
-
-    <!--Carousel End-->
     <section>
         <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
@@ -125,6 +68,7 @@
             </button>
         </div>
     </section>
+    <!--Carousel End-->
     <article style=margin:10%;>
         <div class="portinfo">
             <h3>As you can see,</h3>
@@ -135,75 +79,53 @@
         </div>
         </div>
     </article>
+<!--Project cards Start-->
     <h4 style="margin-left:50px">Additional past projects</h4>
-
-    <!-- <table id="potable">
-            <tr>
-                <td class="thead"><b>Project Delta </b></th>
-                <td class="thead"><b>Project Aeta(Left)</b></th>
-                <td class="thead"><b>Project Iota(Right)</b></th>
-                <td class="thead"><b>Project Omega</b></th>
-        <tr>
-            <td class="thead"><img src="https://static.tvtropes.org/pmwiki/pub/images/Delta_Red_vs_Blue_9223.jpg" alt="Delta image" style="height: 300px; width: 200px;" ></th>
-            <td class="thead"><img src="https://th.bing.com/th/id/R.ff0f3e7ecfd35ef0a7423310e02c3f91?rik=8yC44KSKnlBueA&riu=http%3a%2f%2fimages6.fanpop.com%2fimage%2fpolls%2f1434000%2f1434937_1416412999049_full.png%3fv%3d1416413062&ehk=V1roBPQFWNDAn5zV%2bJCyq%2fzY%2b0dHc3YUq16LZ4Y1iik%3d&risl=&pid=ImgRaw&r=0" alt="Delta image" style="height: 300px; width: 300px;" ></th>
-            <td class="thead"><img src="https://th.bing.com/th/id/R.ff0f3e7ecfd35ef0a7423310e02c3f91?rik=8yC44KSKnlBueA&riu=http%3a%2f%2fimages6.fanpop.com%2fimage%2fpolls%2f1434000%2f1434937_1416412999049_full.png%3fv%3d1416413062&ehk=V1roBPQFWNDAn5zV%2bJCyq%2fzY%2b0dHc3YUq16LZ4Y1iik%3d&risl=&pid=ImgRaw&r=0" alt="Delta image" style="height: 300px; width: 300px;" ></th>
-            <td class="thead"><img src="https://th.bing.com/th/id/R.0b546df46e244bf81c8e252d1b78fd14?rik=jn9ZwohMniyN4g&riu=http%3a%2f%2fimages1.wikia.nocookie.net%2f__cb20121121051212%2frvb%2fimages%2f4%2f47%2fOmega_-_S10.png&ehk=VIaBav6sCT1Ikoyf%2fAea4MibnFPD%2bO0RxzQ0Az2OrCc%3d&risl=&pid=ImgRaw&r=0" alt="Delta image" style="height: 300px; width: 200px;" ></th>
-        </tr>
-        <tr>
-            <td>First assigned to Freelancer Agent "New York" aka "York" He was set to provide highly effective logistical field support ...First assigned to Freelancer Agent "New York" aka "York" He was set to provide highly effective logistical field support...First assigned to Freelancer Agent "New York" aka "York" He was set to provide highly effective logistical field support</th>
-            <td>One odf the last programed AI to come from Project freelancer, classified as failed as a 'Duel' implant experiment....One odf the last programed AI to come from Project freelancer, classified as failed as a 'Duel' implant experiment....One odf the last programed AI to come from Project freelancer, classified as failed as a 'Duel' implant experiment</th>
-            <td>Paired as the second ai for the 'Duel" implant experiment to agent "Carolina" that was ultimately classified as a failure.....Paired as the second ai for the 'Duel" implant experiment to agent "Carolina" that was ultimately classified as a failure.....Paired as the second ai for the 'Duel" implant experiment to agent "Carolina" that was ultimately classified as a failure.</th>
-            <td>The peak of what turned out to be the ambition of a rouge AI that had taken over the mind of Freelancer agent "Maine"...The peak of what turned out to be the ambition of a rouge AI that had taken over the mind of Freelancer agent "Maine".....The peak of what turned out to be the ambition of a rouge AI that had taken over the mind of Freelancer agent "Maine"</th>
-        </tr>
-    </table> -->
     <section>
         <div class="row row-cols-1 row-cols-md-4 g-4">
             <div class="col">
                 <div class="card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/SMPTE_Color_Bars.svg/1200px-SMPTE_Color_Bars.svg.png"
-                        class="card-img-top" alt="test image">
+                    <img src="https://static.tvtropes.org/pmwiki/pub/images/Delta_Red_vs_Blue_9223.jpg" style="height: 250px;"
+                        class="card-img-top" alt="Delta image" >
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
+                        <h5 class="card-title">Project Delta</h5>
+                        <p class="card-text">First assigned to Freelancer Agent "New York" aka "York" He was set to provide highly effective logistical field support ...First assigned to Freelancer Agent "New York" aka "York" He was set to provide highly effective logistical field support...First assigned to Freelancer Agent "New York" aka "York" He was set to provide highly effective logistical field support</p>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/SMPTE_Color_Bars.svg/1200px-SMPTE_Color_Bars.svg.png"
+                    <img src="https://th.bing.com/th/id/R.ff0f3e7ecfd35ef0a7423310e02c3f91?rik=8yC44KSKnlBueA&riu=http%3a%2f%2fimages6.fanpop.com%2fimage%2fpolls%2f1434000%2f1434937_1416412999049_full.png%3fv%3d1416413062&ehk=V1roBPQFWNDAn5zV%2bJCyq%2fzY%2b0dHc3YUq16LZ4Y1iik%3d&risl=&pid=ImgRaw&r=0"
                         class="card-img-top" alt="Test image">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
+                        <h5 class="card-title">Project Aeta(Left)</h5>
+                        <p class="card-text">One of the last programed AI to come from Project freelancer, classified as failed as a 'Duel' implant experiment....One of the last programed AI to come from Project freelancer, classified as failed as a 'Duel' implant experiment....One of the last programed AI to come from Project freelancer, classified as failed as a 'Duel' implant experiment</p>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/SMPTE_Color_Bars.svg/1200px-SMPTE_Color_Bars.svg.png"
+                    <img src="https://th.bing.com/th/id/R.ff0f3e7ecfd35ef0a7423310e02c3f91?rik=8yC44KSKnlBueA&riu=http%3a%2f%2fimages6.fanpop.com%2fimage%2fpolls%2f1434000%2f1434937_1416412999049_full.png%3fv%3d1416413062&ehk=V1roBPQFWNDAn5zV%2bJCyq%2fzY%2b0dHc3YUq16LZ4Y1iik%3d&risl=&pid=ImgRaw&r=0"
                         class="card-img-top" alt="test image">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content.</p>
+                        <h5 class="card-title">Project Iota(Right)</h5>
+                        <p class="card-text">Paired as the second ai for the 'Duel" implant experiment to agent "Carolina" that was ultimately classified as a failure.....Paired as the second ai for the 'Duel" implant experiment to agent "Carolina" that was ultimately classified as a failure.....Paired as the second ai for the 'Duel" implant experiment to agent "Carolina" that was ultimately classified as a failure.</p>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/SMPTE_Color_Bars.svg/1200px-SMPTE_Color_Bars.svg.png"
+                    <img src="https://th.bing.com/th/id/R.0b546df46e244bf81c8e252d1b78fd14?rik=jn9ZwohMniyN4g&riu=http%3a%2f%2fimages1.wikia.nocookie.net%2f__cb20121121051212%2frvb%2fimages%2f4%2f47%2fOmega_-_S10.png&ehk=VIaBav6sCT1Ikoyf%2fAea4MibnFPD%2bO0RxzQ0Az2OrCc%3d&risl=&pid=ImgRaw&r=0" style="height: 250px;"
                         class="card-img-top" alt="Test image">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
+                        <h5 class="card-title">Project Omega</h5>
+                        <p class="card-text">The peak of what turned out to be the ambition of a rouge AI that had taken over the mind of Freelancer agent "Maine"...The peak of what turned out to be the ambition of a rouge AI that had taken over the mind of Freelancer agent "Maine".....The peak of what turned out to be the ambition of a rouge AI that had taken over the mind of Freelancer agent "Maine"</th></p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    <!--Project cards end-->
     <footer>
         <p>trademark G&E industries</p>
         <p>founded 2022</p>
