--- a/Website/Pages/contact.html
+++ b/Website/Pages/contact.html
@@ -8,33 +8,55 @@
     <title>Contact</title>
     <link rel="stylesheet" href="..\CSS\contact.css">
     <link rel="stylesheet" href="..\CSS\styles.css">
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
 
 </head>
+<header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                  aria-expanded="false">
+                  Additional Info
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="services.html">Services</a></li>
+                  <li><a class="dropdown-item" href="portfoli.html">Portfolio</a></li>
+                  <li>
+                    <hr class="dropdown-divider">
+                  </li>
+                  <li><a class="dropdown-item" href="survey.html">Survey</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled">Disabled</a>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+      </nav>
+</header>
 
 <body>
-    <header>
-        <nav class="navi">
-            <div class="title"> Great Ghastly</div>
-            <ul>
-                <li class="navibar">
-                    <a href="index.html">Home</a>
-                </li>
-                <li class="navibar">
-                    <a href="portfoli.html">Portfolio</a>
-                </li>
-                <li class="navibar">
-                    <a href="services.html">Services</a>
-                </li>
-                <li class="navibar">
-                    <a href="contact.html">Contact</a>
-                </li>
-                <li class="navibar">
-                    <a href="survey.html">Survey</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
     <div class="ccenter"></div>
     <div class="bccenter">
         <h1>Contact</h1>
@@ -46,12 +68,13 @@
             1234 Zathura St, Jumanji NA</b>
         </p>
     </div>
-
-
-    <footer>
-        <p>trademark G&E industries</p>
-        <p>founded 2022</p>
-    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
 </body>
+<footer>
+    <p>trademark G&E industries</p>
+    <p>founded 2022</p>
+</footer>
 
 </html>
